fix: fix coffee style on mobile

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -341,5 +341,11 @@ pre {
 .d-pay {
     display: flex;
     justify-content: space-evenly;
-    align-items: stretch;
+    // align-items: stretch;
+    width: 100vh;
+    height: auto;
+    .d-img {
+        width: auto;
+        height: auto;
+    }
 }
